@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>543</width>
-    <height>554</height>
+    <height>483</height>
    </rect>
   </property>
   <property name="windowIcon" >
@@ -291,9 +291,9 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="video_and_audio_tab" >
+     <widget class="QWidget" name="tab_3" >
       <attribute name="title" >
-       <string>&amp;Video and audio</string>
+       <string>&amp;Video</string>
       </attribute>
       <layout class="QVBoxLayout" >
        <property name="margin" >
@@ -303,115 +303,126 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QGroupBox" name="groupBox_5" >
-         <property name="title" >
-          <string>Video</string>
+        <widget class="QCheckBox" name="eq2_check" >
+         <property name="text" >
+          <string>Use s&amp;oftware video equalizer</string>
          </property>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
-           <number>9</number>
-          </property>
-          <property name="spacing" >
-           <number>6</number>
-          </property>
-          <item>
-           <widget class="QCheckBox" name="eq2_check" >
-            <property name="text" >
-             <string>&amp;Use software video equalizer</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" >
-            <property name="margin" >
-             <number>0</number>
-            </property>
-            <property name="spacing" >
-             <number>6</number>
-            </property>
-            <item>
-             <widget class="QCheckBox" name="postprocessing_check" >
-              <property name="text" >
-               <string>&amp;Enable postprocessing by default</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer>
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeType" >
-               <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="sizeHint" >
-               <size>
-                <width>51</width>
-                <height>21</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QLabel" name="textLabel1_5" >
-              <property name="text" >
-               <string>&amp;Quality:</string>
-              </property>
-              <property name="wordWrap" >
-               <bool>false</bool>
-              </property>
-              <property name="buddy" >
-               <cstring>autoq_spin</cstring>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QSpinBox" name="autoq_spin" >
-              <property name="maximum" >
-               <number>6</number>
-              </property>
-              <property name="minimum" >
-               <number>1</number>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="direct_rendering_check" >
-            <property name="text" >
-             <string>D&amp;irect rendering</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="double_buffer_check" >
-            <property name="text" >
-             <string>Dou&amp;ble buffering</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="start_fullscreen_check" >
-            <property name="text" >
-             <string>Start videos in &amp;fullscreen</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="screensaver_check" >
-            <property name="text" >
-             <string>Disable &amp;screensaver</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="groupBox_6" >
+        <layout class="QHBoxLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item>
+          <widget class="QCheckBox" name="postprocessing_check" >
+           <property name="text" >
+            <string>&amp;Enable postprocessing by default</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeType" >
+            <enum>QSizePolicy::Expanding</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>51</width>
+             <height>21</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLabel" name="textLabel1_5" >
+           <property name="text" >
+            <string>&amp;Quality:</string>
+           </property>
+           <property name="wordWrap" >
+            <bool>false</bool>
+           </property>
+           <property name="buddy" >
+            <cstring>autoq_spin</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="autoq_spin" >
+           <property name="maximum" >
+            <number>6</number>
+           </property>
+           <property name="minimum" >
+            <number>1</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="direct_rendering_check" >
+         <property name="text" >
+          <string>D&amp;irect rendering</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="double_buffer_check" >
+         <property name="text" >
+          <string>Dou&amp;ble buffering</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="start_fullscreen_check" >
+         <property name="text" >
+          <string>Start videos in &amp;fullscreen</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="screensaver_check" >
+         <property name="text" >
+          <string>Disable &amp;screensaver</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="video_and_audio_tab" >
+      <attribute name="title" >
+       <string>A&amp;udio</string>
+      </attribute>
+      <layout class="QVBoxLayout" >
+       <property name="margin" >
+        <number>9</number>
+       </property>
+       <property name="spacing" >
+        <number>6</number>
+       </property>
+       <item>
+        <widget class="QGroupBox" name="groupBox_4" >
          <property name="title" >
-          <string>Audio</string>
+          <string>Volume</string>
          </property>
          <layout class="QVBoxLayout" >
           <property name="margin" >
@@ -483,99 +494,11 @@
            </layout>
           </item>
           <item>
-           <widget class="QCheckBox" name="hwac3_check" >
-            <property name="text" >
-             <string>&amp;AC3/DTS pass-through S/PDIF</string>
-            </property>
-           </widget>
-          </item>
-          <item>
            <widget class="QCheckBox" name="volnorm_check" >
             <property name="text" >
              <string>Volume &amp;normalization by default</string>
             </property>
            </widget>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" >
-            <property name="margin" >
-             <number>0</number>
-            </property>
-            <property name="spacing" >
-             <number>6</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="label" >
-              <property name="text" >
-               <string>C&amp;hannels by default:</string>
-              </property>
-              <property name="buddy" >
-               <cstring>channels_combo</cstring>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="channels_combo" />
-            </item>
-            <item>
-             <spacer>
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" >
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QHBoxLayout" >
-            <property name="margin" >
-             <number>0</number>
-            </property>
-            <property name="spacing" >
-             <number>6</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="label_6" >
-              <property name="text" >
-               <string>High speed &amp;playback without altering pitch</string>
-              </property>
-              <property name="buddy" >
-               <cstring>scaletempo_combo</cstring>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="TristateCombo" name="scaletempo_combo" >
-              <property name="sizePolicy" >
-               <sizepolicy>
-                <hsizetype>5</hsizetype>
-                <vsizetype>0</vsizetype>
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer>
-              <property name="orientation" >
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" >
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
           </item>
           <item>
            <layout class="QHBoxLayout" >
@@ -704,6 +627,94 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="hwac3_check" >
+         <property name="text" >
+          <string>&amp;AC3/DTS pass-through S/PDIF</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="label" >
+           <property name="text" >
+            <string>C&amp;hannels by default:</string>
+           </property>
+           <property name="buddy" >
+            <cstring>channels_combo</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QComboBox" name="channels_combo" />
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="label_6" >
+           <property name="text" >
+            <string>High speed &amp;playback without altering pitch</string>
+           </property>
+           <property name="buddy" >
+            <cstring>scaletempo_combo</cstring>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="TristateCombo" name="scaletempo_combo" >
+           <property name="sizePolicy" >
+            <sizepolicy>
+             <hsizetype>5</hsizetype>
+             <vsizetype>0</vsizetype>
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item>
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -790,7 +801,7 @@ For translators: don't translate this text, it will be replaced with another one
          <item row="1" column="0" >
           <widget class="QLabel" name="textLabel1_20" >
            <property name="text" >
-            <string>A&amp;udio:</string>
+            <string>&amp;Audio:</string>
            </property>
            <property name="alignment" >
             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -976,13 +987,13 @@ For translators: don't translate this text, it will be replaced with another one
   <tabstop>screensaver_check</tabstop>
   <tabstop>softvol_check</tabstop>
   <tabstop>softvol_max_spin</tabstop>
-  <tabstop>hwac3_check</tabstop>
   <tabstop>volnorm_check</tabstop>
-  <tabstop>channels_combo</tabstop>
-  <tabstop>scaletempo_combo</tabstop>
   <tabstop>change_volume_check</tabstop>
   <tabstop>initial_volume_slider</tabstop>
   <tabstop>use_volume_option_check</tabstop>
+  <tabstop>hwac3_check</tabstop>
+  <tabstop>channels_combo</tabstop>
+  <tabstop>scaletempo_combo</tabstop>
   <tabstop>audio_lang_edit</tabstop>
   <tabstop>subtitle_lang_edit</tabstop>
   <tabstop>audio_track_spin</tabstop>
